--- a/CSS DAY 4 Postions/CSS POsition.html
+++ b/CSS DAY 4 Postions/CSS POsition.html
@@ -7,45 +7,122 @@
     <style>
         .name{
             border: solid;
-            height: 100vh;
-            width: 100vw;
+            height: 400px;
+            width: 730px;
+
+        }
+        .rajesh{
+            height: 10px;
+            width: 20px;
+            position:relative;
+            top: -400px;
+            left: 300px;
+            color: blue;
+        }
+        .raja{
+            position: relative;
+        top: -250px;
+        z-index:1;
+        color: aqua;
+        margin-left: 100px;
+
+
 
         }
         .id{
-            margin-top: -680px;
+            margin-top: -350px;
             margin-left: 10px;
+            position: relative;
+            left: 50px;
         }
         .type{
             margin-top: -104px;
             margin-left: 230px;
+            position: relative;
+            left: 50px;
         }
         .for{
 margin-top: -104px;
 margin-left: 450px;
+position: relative;
+left: 50px;
 
         }
         .game{
 
             margin-top: 10px;
             margin-left: 10px;
+            position: relative;
+            left: 50px;
         }
         .condition{
             margin-top: -105px;
             margin-left: 230px;
+            position: relative;
+            left: 50px;
         }
         .if{
             margin-top: -105px;
             margin-left: 450px;
+            position: relative;
+            left: 50px;
+        }
+        .kalyan{
+            position: relative;
+            top: -200px;
+            z-index: 1;
+            color: green;
+            margin-left: 350px;
+        }
+        .nothing{
+            position: relative;
+            top: -260px;
+            z-index: 1;
+            color: rgb(128, 0, 90);
+            margin-left: 550px;
+        }
+        .a{
+            position: relative;
+            top:-200px;
+            z-index: 1;
+            color: rgb(128, 0, 90);
+            margin-left: 80px;
+        }
+        .snow{
+            position: relative;
+            top:-250px;
+            z-index: 1;
+            color: rgb(128, 17, 0);
+            margin-left: 350px;
+
+        }
+        .road{
+            position: relative;
+            top:-300px;
+            z-index: 1;
+            color: rgb(17, 128, 0);
+            margin-left: 550px; 
         }
     </style>
 </head>
 <body>
     <div class="name"></div>
+    <h1 class="rajesh">Gallery</h1>
+    <h1 class="raja"> Houses</h1>
     <div class="id"><img src="./jpg_44-2.jpg" height="100px" width="200px"></div>
     <div class="type"><img src="./Landscape-Photography-by-Dmitry-Pitenin_4.jpg" height="100" width="200"></div>
     <div class="for"><img src="./leonardopapera-formats-4.jpg" height="100" width="200"></div>
     <div class="game"><img src="./OIP.jpg" height="100" width="200" alt=""></div>
     <div class="condition"> <img src="./svalbard-borebukta-80348cp-raimondo-restelli.jpg" height="100" width="200" alt=""></div>
     <div class="if"><img src="./wp7791348.jpg" height="100" width="200" alt=""></div>
+    <h1 class="kalyan">Hills</h1>
+    <h1 class="nothing">Sea</h1>
+    <h1 class="a">Wheather</h1>
+    <h1 class="snow">Snow</h1>
+    <h1 class="road">Road</h1>
+
+    <div>
+    <video src="./"></video>
+    </div>
 </body>
 </html>
