--- a/CSS DAY 4 Postions/index.html
+++ b/CSS DAY 4 Postions/index.html
@@ -103,6 +103,7 @@ left: 50px;
             color: rgb(17, 128, 0);
             margin-left: 550px; 
         }
+    
     </style>
 </head>
 <body>
@@ -121,8 +122,9 @@ left: 50px;
     <h1 class="snow">Snow</h1>
     <h1 class="road">Road</h1>
 
-    <div>
-    <video src="./"></video>
+    <div class="not">
+    <video src="./Video by manaaddankitown.mp4" height="500px" width="1000px" controls muted ></video>
+    <h1 class="traffic" style="position: relative;top: -500px;left: 400px;">Traffic</h1>
     </div>
 </body>
 </html>
